Image Editor Clone Tool: texture draws behind main texture #82064

Closed
opened 2020-10-25 17:02:15 +01:00 by Diogo Valadares Reis dos Santos · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27017

Blender Version
Broken: 2.91.0 Beta, branch: master, commit date: 2020-10-22 21:22, hash: baa24f1c91
Worked: : 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0

Exact steps for others to reproduce the error

With the clone tool, the overlay texture isn't displayed properly (it draws behind the main Image)
2.90.1:
image.png
2.91:
image.png
It can be easily reproduced just by using the clone tool with any texture

#82064.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27017 **Blender Version** Broken: 2.91.0 Beta, branch: master, commit date: 2020-10-22 21:22, hash: `baa24f1c91` Worked: : 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` **Exact steps for others to reproduce the error** With the clone tool, the overlay texture isn't displayed properly (it draws behind the main Image) 2.90.1: ![image.png](https://archive.blender.org/developer/F9088422/image.png) 2.91: ![image.png](https://archive.blender.org/developer/F9088427/image.png) It can be easily reproduced just by using the clone tool with any texture [#82064.blend](https://archive.blender.org/developer/F9100041/T82064.blend)

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi and thx reporting.
For the first issue, I can confirm.
Clone Image draws behind the main Image.

For the second issue, I would kindly ask to open a separate report for this, otherwise it is going to be harder tracking progress on each of them.
I will update this report accordingly.

Hi and thx reporting. For the first issue, I can confirm. Clone Image draws behind the main Image. For the second issue, I would kindly ask to open a separate report for this, otherwise it is going to be harder tracking progress on each of them. I will update this report accordingly.
Philipp Oeser changed title from Problems with Image editor painting tools to Image Editor Clone Tool: texture draws behind main texture 2020-10-26 10:37:39 +01:00
Jeroen Bakker was assigned by Philipp Oeser 2020-10-26 10:38:32 +01:00
Member

I am not familiar with the clone tool. I wasn't able to use it in the image editor with the documentation in the manual https://docs.blender.org/manual/en/latest/sculpt_paint/texture_paint/tools.html. (RMB shows me the brush settings). Is there another way how to use it. A prepared example file would also help.

Issue might be related to the more advanced usages of the depth buffer, but could also be related to the GPU depth settings. But without the exact steps I cannot tell where to look at. Thanks!

I am not familiar with the clone tool. I wasn't able to use it in the image editor with the documentation in the manual https://docs.blender.org/manual/en/latest/sculpt_paint/texture_paint/tools.html. (`RMB` shows me the brush settings). Is there another way how to use it. A prepared example file would also help. Issue might be related to the more advanced usages of the depth buffer, but could also be related to the GPU depth settings. But without the exact steps I cannot tell where to look at. Thanks!
Member

@lichtwerk explained it to me. Seems to be multiple issues the new draw engines separates the overlays from the images. The stencil image is rendered with alpha blend on the overlay buffer but has a depth test enabled. The depth of the stencil image is set to 1.0. what is behind the displayed image (depth = 0.75)

Solution within the current architecture would be to draw the stencil with depth 0.6 (below the UVs) in the overlay engine. eg: Phase out draw_image_paint_helpers

@lichtwerk explained it to me. Seems to be multiple issues the new draw engines separates the overlays from the images. The stencil image is rendered with alpha blend on the overlay buffer but has a depth test enabled. The depth of the stencil image is set to 1.0. what is behind the displayed image (depth = 0.75) Solution within the current architecture would be to draw the stencil with depth 0.6 (below the UVs) in the overlay engine. eg: Phase out `draw_image_paint_helpers`

This issue was referenced by 1e1c39fc89

This issue was referenced by 1e1c39fc89395c5e5a68a7a21500195cd8dc6fd5

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@lichtwerk for the records, the sample file is a really confusing one for me. To see if a grid is drawing correctly on top of another grid is not ideal.

If we were not that close to the release I would ask a better file.

@lichtwerk for the records, the sample file is a really confusing one for me. To see if a grid is drawing correctly on top of another grid is not ideal. If we were not that close to the release I would ask a better file.

(to be fair, I managed to get hang of the file later, changing one of the texture from color to uv grid helped me a lot already, that and remembering how to pan the stencil - RMB)

(to be fair, I managed to get hang of the file later, changing one of the texture from color to uv grid helped me a lot already, that and remembering how to pan the stencil - RMB)
Member

In #82064#1055742, @dfelinto wrote:
(to be fair, I managed to get hang of the file later, changing one of the texture from color to uv grid helped me a lot already, that and remembering how to pan the stencil - RMB)

glad to hear, but yes, often times a lot could be a little more straightforward

> In #82064#1055742, @dfelinto wrote: > (to be fair, I managed to get hang of the file later, changing one of the texture from color to uv grid helped me a lot already, that and remembering how to pan the stencil - RMB) glad to hear, but yes, often times a lot could be a little more straightforward
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82064
No description provided.